feat: visualizzazione disegni dei bambini
Co-authored-by: Emanuele A. <161335121+numberzeroo@users.noreply.github.com>